Fixed overflow on small screens

--- a/src/styles/Job.css
+++ b/src/styles/Job.css
@@ -64,7 +64,7 @@ hr {
 
 .tags {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     gap: 1rem;
 }
 
